--- a/css/main.css
+++ b/css/main.css
@@ -1,5 +1,5 @@
 #wrapper{
-	width: 1200px;
+	width: 1111px;
 	margin: 5px auto;
 }
 
@@ -11,22 +11,26 @@
 	border-radius: 5px;
 }
 
-#tools-toolbar{
+.tools-toolbar{
 	display: inline-block;
 	width: 50px;
 	height: 100%;
 	float: left;
 
 	background-color: #f2f2f2;
+}
+
+.right-border{
 	border-right: 3px solid #d9d9d9;
+}
+.left-border{
+	border-left: 3px solid #d9d9d9;
 }
 
 #canvas{
 	display: inline-block;
 	height: 100%;
 	float: left;
-
-	
 }
 
 .tool{
