--- a/angular2/src/app/app.component.html
+++ b/angular2/src/app/app.component.html
@@ -1,4 +1,4 @@
-<div class="row">
+<!-- <div class="row">
   <div class="col s12 m6">
     <div class="card blue darken-3">
       <div class="card-content white-text">
@@ -18,4 +18,10 @@
       </div>
     </div>
   </div>
-</div>
+</div> -->
+
+<ul id="slide-out" class="side-nav fixed">
+  <li><a href="#!">First Sidebar Link</a></li>
+  <li><a href="#!">Second Sidebar Link</a></li>
+</ul>
+<a href="#" data-activates="slide-out" class="button-collapse"><i class="material-icons">menu</i></a>
